Halfway through Day2 of Project 1

--- a/index.html
+++ b/index.html
@@ -9,20 +9,27 @@
 	</header>
 
 	<div id="start-button"> </div>
+	<br>
 
-	<div id="dealer"> </div>
+	<div id="dealer">Dealer</div>
 
 	<div id="game-area"> </div>
 
-	<div id="player"> </div>
+	<div id="player">Player</div>
 
 	<div id="bankroll"> </div>
 
-	<div id="shuffle"> </div>
+	<div id="bet-amount"> </div>
 
-	<div id="hit-me"> </div>
+	<div class="buttons">
+		<div id="shuffle"> </div>
 
-	<div id="stand"> </div>
+		<div id="hit-me"> </div>
+
+		<div id="stand"> </div>
+
+		<div id="place-bet"> </div>
+	</div>
 
 	<div id="alert-info"> </div>
 
@@ -31,6 +38,7 @@
 		<h4>Created by Ian Ross</h4>
 	</footer>
 
+<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script type="text/javascript" src="blackjack.js"></script>
 </body>
 </html>
